# TVBridge

./: .gitignore  CLAUDE.md  CLAUDE_CODE_BOOTSTRAP_PROMPT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TVBridge.sln
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  docs-scribe.md  python-mt5.md  test-writer.md  wpf-ui.md
.claude/hooks/: block-destructive.sh  block-secrets.sh  format-cs.sh  format-py.sh  session-start.sh  stop-build-check.sh  validate-xaml.sh
docs/: BUILD_PLAN.md  SMARTSCREEN.md  architecture.md  signal-schema.json  tradingview-template.txt
docs/adr/: 001-python-sidecar-for-mt5.md
installer/: tvbridge.iss
scripts/: release-build.ps1
sidecar/mt5_bridge/: README.md  main.py  models.py  mt5_wrapper.py  pyproject.toml  requirements.txt  server.py
sidecar/mt5_bridge/tests/: test_models.py  test_server.py
src/TVBridge.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TVBridge.App.csproj
src/TVBridge.Channels/: SignalMessageFormatter.cs  TVBridge.Channels.csproj
src/TVBridge.Core/: AppSettings.cs  CrashReporter.cs  IOutputChannel.cs  Mt5Config.cs  OrderType.cs  RouteMatch.cs  Rule.cs  RuleEvaluator.cs  Signal.cs  SignalAction.cs  SignalPipeline.cs  SignalValidator.cs  TVBridge.Core.csproj  TunnelConfig.cs  UpdateChecker.cs  ValidationResult.cs
src/TVBridge.Storage/: DatabaseManager.cs  DpapiHelper.cs  MigrationRunner.cs  TVBridge.Storage.csproj
src/TVBridge.Tunnel/: CloudflaredDownloader.cs  CloudflaredManager.cs  TVBridge.Tunnel.csproj  TunnelManager.cs  TunnelStatus.cs
(+96 files in other folders)
